--- a/Appendix.tex
+++ b/Appendix.tex
@@ -14,7 +14,8 @@ Heatmap for cka: Block importance for different time steps
 
 
 
-\section{Appendix B}
+\section{Appendix B - Detailed Overview of Selected Blocks Experiments}
+In this section, the removed or compressed blocks for each experiments are visualized. Different colors indicates during which iteration of the progressive pruning framework the specific block was selected. 
 \subsection{One Shot vs Progressive Model Pruning}
 \label{sec:OneShotvsProgressiveBlockDistribution}
 \begin{figure}[htbp]
