--- a/bibliography.bib
+++ b/bibliography.bib
@@ -92,6 +92,13 @@
 	year={2025}
 }
 
+@article{dong2025attention,
+	title={Attention Retrieves, MLP Memorizes: Disentangling Trainable Components in the Transformer},
+	author={Dong, Yihe and Noci, Lorenzo and Khodak, Mikhail and Li, Mufan},
+	journal={arXiv preprint arXiv:2506.01115},
+	year={2025}
+}
+
 @article{ASVD,
 	title={Asvd: Activation-aware singular value decomposition for compressing large language models},
 	author={Yuan, Zhihang and Shang, Yuzhang and Song, Yue and Yang, Dawei and Wu, Qiang and Yan, Yan and Sun, Guangyu},
