--- a/glossary.tex
+++ b/glossary.tex
@@ -57,6 +57,12 @@
 	description={Central Kernal Alignment}
 }
 
+\newglossaryentry{RMS}
+{
+	name=RMS,
+	description={Root Mean Square}
+}
+
 \newglossaryentry{LoRA}
 {
 	name=LoRA,
